Re-add asserts to simplify production null checks.